--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "babel-loader": "8.0.6",
     "cross-env": "5.2.1",
     "css-loader": "2.0.2",
-    "cypress": "3.4.1",
+    "cypress": "3.8.3",
     "d3": "^5.5.0",
     "documentation": "12.1.2",
     "eslint": "6.3.0",
@@ -63,13 +63,13 @@
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-standard": "4.0.1",
     "html-webpack-plugin": "2.30.1",
-    "http-server": "0.11.1",
+    "http-server": "^0.12.1",
     "husky": "3.0.5",
     "jest": "24.9.0",
     "jsdoc": "^3.6.3",
     "lint-staged": "9.2.5",
     "npm-run-all": "4.1.5",
-    "prettier": "1.18.2",
+    "prettier": "1.19.1",
     "query-string": "6.8.3",
     "react": "^16.4.1",
     "react-addons-test-utils": "15.6.2",
@@ -77,10 +77,10 @@
     "react-editable-json-tree": "2.2.1",
     "react-jsonschema-form": "1.0.4",
     "react-test-renderer": "16.9.0",
-    "react-toastify": "5.4.0",
+    "react-toastify": "5.5.0",
     "style-loader": "0.18.2",
-    "typescript": "3.6.2",
-    "webpack": "4.28.1",
+    "typescript": "3.8.3",
+    "webpack": "4.41.6",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "3.3.8",
     "webpack-dev-server": "^3.1.14",
